--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "socket.io-client": "^4.7.4",
+    "vue": "^2.6.14",
+    "vue-socket.io": "^3.0.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
